--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <a href="about.html" class="btn">Explore More</a>
     </div>
     <div class="about-image">
-      <img src="/image copy.png" alt="School History">
+      <img src="images/school.png" alt="School History">
     </div>
   </div>
 </section>
